--- a/Contact.css
+++ b/Contact.css
@@ -189,7 +189,11 @@ color:#8B6E80;
   border: 2px #004d4d solid;
   }
 
-  @media only screen and (max-width: 767px) {
+
+  /* IPhone 12 Pro max queries-------------------------------------------------------------------------------*/
+
+  @media only screen and (max-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
+
     .BackgroundBaseColor{
       width: 428px;
       height: 926px;
@@ -198,7 +202,7 @@ color:#8B6E80;
     .CTA {
       font-size: 20px;
       padding: 20px;
-      margin-top: 200px;
+      margin-top: 680px;
       width: 90%;
       position: relative;
     }
