--- a/Contact.css
+++ b/Contact.css
@@ -190,62 +190,158 @@ color:#8B6E80;
   }
 
 
-  /* IPhone 12 Pro max queries-------------------------------------------------------------------------------*/
-
-  @media only screen and (max-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
-
-    .BackgroundBaseColor{
-      width: 428px;
-      height: 926px;
-      position: relative;
-    }
-    .CTA {
-      font-size: 20px;
-      padding: 20px;
-      margin-top: 800px;
-      width: 90%;
-      position: absolute;
-    }
-  
-    .Image1 {
-      width: 120px;
-      height: auto;
-      left: 10px;
-      top: 20px;
-
-    }
-  
-    .Image7 {
-      width: 120px;
-      height: auto;
-      left: 10px;
-      top: 10px;
-    }
-  
-    .ContactDes {
-      font-size: 40px;
-      left: 10px;
-      top: 150px;
-    }
-  
-    .ContactText {
-      width: 100%;
-      font-size: 16px;
-      left: 10px;
-      top: 220px;
-    }
-  
-    .contact-info {
-      width: 100%;
-      font-size: 18px;
-      left: 10px;
-      top: 300px;
-    }
-  
-    .Vector7 {
-      width: 100%;
-      left: 0;
-      top: 350px;
-      border-width: 1px;
-    }
+ /* Medium Screens (768px to 991px) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .CTA {
+    font-size: 25px;
+    padding: 30px;
+    margin-top: 600px;
+    width: 80%;
+    position: absolute;
   }
+
+  .Image1 {
+    width: 150px;
+    height: auto;
+    left: 20px;
+    top: 30px;
+  }
+
+  .Image7 {
+    width: 150px;
+    height: auto;
+    left: 20px;
+    top: 20px;
+  }
+
+  .ContactDes {
+    font-size: 48px;
+    left: 20px;
+    top: 180px;
+  }
+
+  .ContactText {
+    width: 90%;
+    font-size: 18px;
+    left: 20px;
+    top: 250px;
+  }
+
+  .contact-info {
+    width: 90%;
+    font-size: 20px;
+    left: 20px;
+    top: 350px;
+  }
+
+  .Vector7 {
+    width: 100%;
+    left: 0;
+    top: 400px;
+    border-width: 2px;
+  }
+}
+
+/* Mobile Screens (max-width: 767px) */
+@media only screen and (max-width: 767px) {
+  .CTA {
+    font-size: 20px;
+    padding: 20px;
+    margin-top: 400px;
+    width: 90%;
+    position: absolute;
+  }
+
+  .Image1 {
+    width: 120px;
+    height: auto;
+    left: 10px;
+    top: 20px;
+  }
+
+  .Image7 {
+    width: 120px;
+    height: auto;
+    left: 10px;
+    top: 10px;
+  }
+
+  .ContactDes {
+    font-size: 32px;
+    left: 10px;
+    top: 150px;
+  }
+
+  .ContactText {
+    width: 100%;
+    font-size: 14px;
+    left: 10px;
+    top: 220px;
+  }
+
+  .contact-info {
+    width: 100%;
+    font-size: 16px;
+    left: 10px;
+    top: 300px;
+  }
+
+  .Vector7 {
+    width: 100%;
+    left: 0;
+    top: 350px;
+    border-width: 1px;
+  }
+}
+
+/* Mobile Screens (max-width: 320px) */
+@media only screen and (max-width: 320px) {
+  .CTA {
+    font-size: 18px;
+    padding: 15px;
+    margin-top: 300px;
+    width: 90%;
+    position: absolute;
+  }
+
+  .Image1 {
+    width: 100px;
+    height: auto;
+    left: 5px;
+    top: 10px;
+  }
+
+  .Image7 {
+    width: 100px;
+    height: auto;
+    left: 5px;
+    top: 5px;
+  }
+
+  .ContactDes {
+    font-size: 24px;
+    left: 5px;
+    top: 100px;
+  }
+
+  .ContactText {
+    width: 100%;
+    font-size: 12px;
+    left: 5px;
+    top: 150px;
+  }
+
+  .contact-info {
+    width: 100%;
+    font-size: 14px;
+    left: 5px;
+    top: 200px;
+  }
+
+  .Vector7 {
+    width: 100%;
+    left: 0;
+    top: 250px;
+    border-width: 1px;
+  }
+}
