--- a/Contact.css
+++ b/Contact.css
@@ -247,8 +247,8 @@ color:#8B6E80;
   .CTA {
     font-size: 20px;
     padding: 20px;
-    margin-top: 400px;
-    width: 90%;
+    margin-top: 670px;
+    width: 100%;
     position: absolute;
   }
 
@@ -256,7 +256,7 @@ color:#8B6E80;
     width: 120px;
     height: auto;
     left: 10px;
-    top: 20px;
+    top: 10px;
   }
 
   .Image7 {
@@ -269,27 +269,27 @@ color:#8B6E80;
   .ContactDes {
     font-size: 32px;
     left: 10px;
-    top: 150px;
+    top: 180px;
   }
 
   .ContactText {
     width: 100%;
-    font-size: 14px;
-    left: 10px;
-    top: 220px;
+    font-size: 15px;
+    left: 0;
+    top: 250px;
   }
 
   .contact-info {
     width: 100%;
     font-size: 16px;
     left: 10px;
-    top: 300px;
+    top: 425px;
   }
 
   .Vector7 {
     width: 100%;
     left: 0;
-    top: 350px;
+    top: 280px;
     border-width: 1px;
   }
 }
