--- a/Contact.css
+++ b/Contact.css
@@ -193,53 +193,52 @@ color:#8B6E80;
  /* Medium Screens (768px to 991px) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .CTA {
-    font-size: 25px;
-    padding: 30px;
-    margin-top: 600px;
-    width: 80%;
+    font-size: 20px;
+    padding: 20px;
+    margin-top: 670px;
+    width: 100%;
     position: absolute;
   }
 
   .Image1 {
-    width: 150px;
+    width: 120px;
     height: auto;
-    left: 20px;
-    top: 30px;
+    left: 10px;
+    top: 10px;
   }
 
   .Image7 {
-    width: 150px;
+    width: 120px;
     height: auto;
-    left: 20px;
-    top: 20px;
+    left: 10px;
+    top: 10px;
   }
 
   .ContactDes {
-    font-size: 48px;
-    left: 20px;
+    font-size: 32px;
+    left: 10px;
     top: 180px;
   }
 
   .ContactText {
-    width: 90%;
-    font-size: 18px;
-    left: 20px;
+    width: 100%;
+    font-size: 15px;
+    left: 0;
     top: 250px;
   }
 
   .contact-info {
-    width: 90%;
-    font-size: 20px;
-    left: 20px;
-    top: 350px;
+    width: 100%;
+    font-size: 16px;
+    left: 10px;
+    top: 425px;
   }
 
   .Vector7 {
     width: 100%;
     left: 0;
-    top: 400px;
-    border-width: 2px;
-  }
+    top: 280px;
+    border-width: 1px;
 }
 
 /* Mobile Screens (max-width: 767px) */
