--- a/About.css
+++ b/About.css
@@ -132,7 +132,7 @@ p {
 
 
   /* Medium Screens (768px to 991px) */
-  @media only screen and (min-width: 768px) and (max-width: 1618px) {
+  @media only screen and (min-width: 768px)  {
   
     .container {
       padding: 60px;
