--- a/Contact.css
+++ b/Contact.css
@@ -66,6 +66,7 @@ color:#8B6E80;
 
 
 .BackgroundBaseColor{
+  flex-direction: row;
   width: 100%;
     overflow: hidden; /* Prevent overflow issues */
     height: 100%; 
@@ -190,107 +191,8 @@ color:#8B6E80;
   }
 
 
- /* Medium Screens (768px to 991px) */
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .CTA {
-    font-size: 25px;
-    padding: 30px;
-    margin-top: 600px;
-    width: 80%;
-    position: absolute;
+ @media(max-width: 600px){
+  .BackgroundBaseColor{
+    flex-direction: column;
   }
-
-  .Image1 {
-    width: 150px;
-    height: auto;
-    left: 20px;
-    top: 30px;
-  }
-
-  .Image7 {
-    width: 150px;
-    height: auto;
-    left: 20px;
-    top: 20px;
-  }
-
-  .ContactDes {
-    font-size: 48px;
-    left: 20px;
-    top: 180px;
-  }
-
-  .ContactText {
-    width: 90%;
-    font-size: 18px;
-    left: 20px;
-    top: 250px;
-  }
-
-  .contact-info {
-    width: 90%;
-    font-size: 20px;
-    left: 20px;
-    top: 350px;
-  }
-
-  .Vector7 {
-    width: 100%;
-    left: 0;
-    top: 405px;
-    border-width: 2px;
-  }
-}
-
-
-/* Mobile Screens (max-width: 320px) */
-@media only screen and (max-width: 320px) {
-  .CTA {
-    font-size: 18px;
-    padding: 15px;
-    margin-top: 300px;
-    width: 90%;
-    position: absolute;
-  }
-
-  .Image1 {
-    width: 100px;
-    height: auto;
-    left: 5px;
-    top: 10px;
-  }
-
-  .Image7 {
-    width: 100px;
-    height: auto;
-    left: 5px;
-    top: 5px;
-  }
-
-  .ContactDes {
-    font-size: 24px;
-    left: 5px;
-    top: 100px;
-  }
-
-  .ContactText {
-    width: 100%;
-    font-size: 12px;
-    left: 5px;
-    top: 150px;
-  }
-
-  .contact-info {
-    width: 100%;
-    font-size: 14px;
-    left: 5px;
-    top: 200px;
-  }
-
-  .Vector7 {
-    width: 100%;
-    left: 0;
-    top: 250px;
-    border-width: 1px;
-  }
-}
+ }
