--- a/About.css
+++ b/About.css
@@ -122,12 +122,17 @@ p {
   }
 
   .Vector7 {
-    width: 2750%; 
-    height: 0px; 
-    left: 0px; 
-    top: 55px; 
+    width: 10%; 
+    height: 0; 
+    left: 0; 
+    top: 0; 
     position: absolute; 
-    border: 3px #004d4d solid;
+    border: 2px #004d4d solid;
+  }
+
+  .Image7{
+  width: 100%; 
+  height: 40px;
   }
 
 
