--- a/Contact.css
+++ b/Contact.css
@@ -195,7 +195,7 @@ color:#8B6E80;
 
 @media only screen and (max-width: 768px){
   .BackgroundBaseColor{
-    width: 100%;
+    width: 768px;
   }
   .CTA{
     font-size: 10px;
@@ -205,7 +205,7 @@ color:#8B6E80;
   }
   .ContactDes{
     width: 100%;
-    font-size: 15px;
+    font-size: 30px;
     left: 0;
 
   }
@@ -216,6 +216,7 @@ color:#8B6E80;
     top: 450px;
   }
   .ContactText{
+    font-size: 10px;
     left: 0;
     width: 100%;
   }
@@ -232,6 +233,6 @@ color:#8B6E80;
   .Vector7{
     width: 100%;
     left: 0;
-    top: 420px;
+    top: 425px;
   }
 }
