--- a/Contact.css
+++ b/Contact.css
@@ -197,7 +197,7 @@ color:#8B6E80;
 
   .CTA{
     font-size: 10px;
-    width: 360px;
+    width:  100%;
     margin-top: 600px;
     left: 0;
     position: absolute;
@@ -220,7 +220,6 @@ color:#8B6E80;
   .ContactText{
     font-size: 10px;
     position: absolute;
-
     left: 0;
     width: 100%;
   }
@@ -246,6 +245,8 @@ color:#8B6E80;
   }
 }
 
+@media (max-width: 767.98px){
 
+}
 
   
