--- a/Contact.css
+++ b/Contact.css
@@ -199,7 +199,7 @@ color:#8B6E80;
     font-size: 10px;
     width:  100%;
     margin-top: 600px;
-    left: 0;
+    left: -20px;
     position: absolute;
 
   }
