--- a/About.css
+++ b/About.css
@@ -86,14 +86,17 @@ p {
   }
   
   .header img {
-    width: 50px;
-  right: 10px;
-  top: -10px;
-  height: 90px;
-  position: absolute;
+    width: 75px;
+    right: 200px;
+    height: 40px;
     /* Remove position absolute to allow flexbox alignment */
   }
-
+  .Image1{
+    left: 1px;
+    top: 20px;
+    position: absolute;
+  }
+  
   .nav__links{
       display: inline-block;
       
@@ -128,6 +131,10 @@ p {
     border: 2px #004d4d solid;
   }
 
+  .Image7{
+  width: 100%; 
+  height: 40px;
+  }
 
 
   /* Medium Screens (768px to 991px) */
