--- a/index.css
+++ b/index.css
@@ -174,6 +174,23 @@ body {
   
   }
 
+  #loading-animation {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1001;
+    display: none;
+}
+
+body.loading #loading-animation {
+    display: block;
+}
+
+body.loading a, body.loading nav ul li a {
+    pointer-events: none; /* Disable interactions while loading */
+}
+
 
 /* Tablet styles------------------------------------------------------------------------ */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
