--- a/Projects2.css
+++ b/Projects2.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d9fdeb; /* Result of mixing Azure with darker grey */
+  background-color: #000000; /* Result of mixing Azure with darker grey */
   padding: 0;
     margin: 0;
 }
