--- a/Projects.css
+++ b/Projects.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 body{
-  background-color: #d9fdeb; /* Result of mixing Azure with darker grey */
+  background-color: #000000; /* Result of mixing Azure with darker grey */
   margin: 0;
    padding: 0;
 }
